# pa193-seminar02-cpp

./: CMakeLists.txt  README.md  fail.cpp
.github/workflows/: codacy.yml  msvc.yml
